fix(button): fix alignment text demo

--- a/projects/demo/src/app/pages/components/showcases/button/button.component.scss
+++ b/projects/demo/src/app/pages/components/showcases/button/button.component.scss
@@ -4,6 +4,6 @@
   }
 }
 
-p {
+p span {
   display: inline-flex;
 }
